<resources>
    <!--Created by android studio-->
    <string name="app_name">San Joy Lao</string>
    <string name="ver_carta">Ver carta</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="action_about">Acerca de</string>
    <string name="action_orders">Ver pedidos</string>

    <!--San Joy Lao configurations-->
    <string name="default_text">Julio Mandujano Nalvarte</string>
    <string name="default_datatime">19-Jul. 19:32</string>
    <string name="motto">\"Donde usted es parte de la familia...\"</string>
  
    <string name="lorem_ipsum">
       Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
    </string>

    <!-- Navigation actionbar names -->
    <string name="drawer_open">Cerrar</string>
    <string name="drawer_close">Abrir</string>

    <string name="item_title_entree">Entradas</string>
    <string name="item_title_soup">Sopas &amp; caldos</string>
    <string name="item_title_category">Fondos</string>
    <string name="item_title_chef">Recomendaciones del chef</string>
    <string name="item_title_meat_and_chicken">Pollos y carnes</string>
    <string name="item_title_fish">Pescados</string>
    <string name="item_title_vegetarian_food">Comida vegetariana</string>
    <string name="item_title_banquet">Banquetes</string>
    <string name="item_title_drinks">Vinos &amp; bebidas</string>
    <string name="item_title_call_center">Central telefónica</string>


    <!--Tabs-->
    <string name="tab_description">Descrip.</string>
    <string name="tab_comments">Coment.</string>
    <string name="tab_account">Account</string>
    <string name="tab_favorite">Favorite</string>

    <!--Buttons-->
    <string name="button_send">Enviar</string>
    <string name="button_order">Pedir</string>
    <string name="button_confirm_order">Confirmar</string>
    <string name="button_send_survey">Enviar</string>
    <string name="title_activity_options_grid">Options</string>
    <string name="title_activity_login">Inicio sesión</string>

    <!--Login-->
    <string name="tv_login">Ingresa Usando:</string>


    <!--Titles-->
    <!--<string name="title_alert_warning"></string>-->
    <string name="title_booking_options">¿Qué tipo de servicio desea elegir?</string>
    <string name="title_alert_yes">Si</string>
    <string name="title_personal">Personal</string>
    <string name="title_mediana">Mediana</string>
    <string name="title_grande">Grande</string>
    <string name="title_taza">Taza</string>
    <string name="title_fuente">Fuente</string>
    <string name="title_orders">Mis pedidos</string>
    <string name="title_survey">Queremos asegurarnos de brindarle un mejor servicio. Por favor responda la siguiente encuesta:</string>
    <string name="title_survey_question_one">¿Le fue útil la información brindada?</string>
    <string name="title_survey_question_two">¿Cómo calificarías a la aplicación?</string>
    <string name="title_survey_question_three">¿Qué tal le pareció el servicio ofrecido?</string>
    <string name="title_activity_options">Options Activity</string>
    <string name="title_activity_details_options_popup">Detalle de opciones</string>

    <!--Labels-->
    <string name="label_bad">Malo</string>
    <string name="label_excellent">Excelente</string>
    <string name="label_send_comments">Envíanos tus comentarios</string>
    <string name="label_title_access">Datos de acceso</string>
    <string name="label_title_personal_data">Datos personales</string>
    <string name="label_title_status">Estado</string>


    <!--Bookings-->
    <string name="booking_table">Servicio a la mesa</string>
    <string name="booking_order">Reserva</string>
    <string name="booking_delivery">Delivery</string>
    <string name="title_activity_survey">Encuesta</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_profile_name">Renzo D. Santillán Ch.</string>
    <string name="dummy_profile_email">rsantillancgmail.com</string>
    <string name="nav_main_submenu_title">Adicional</string>
    <string name="nav_main_submenu_contacto">Contacto</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_maps">Map</string>

    <!-- Keys -->
    <string name="facebook_app_id">630010387139153</string>
    <string name="login_with_facebook">Facebook</string>
    <string name="login_with_google">Google +</string>
    <string name="action_login_info">Information</string>
    <string name="toast_error_null">Objecto nulo</string>
    <string name="progress_message_registering">Registrando...</string>
    <string name="progress_message_connecting">Conectando...</string>
    <string name="progress_message_starting">Iniciando...</string>
    <string name="action_profile">Perfil</string>
    <string name="title_activity_order">Mis pedidos</string>
    <string name="title_activity_profile">Renzo Santillán Ch.</string>
    <string name="label_profile_created">"Created: "</string>
    <string name="view_card">Ver carta</string>
    <string name="title_my_orders">Mis pedidos</string>
    <string name="action_size_popup_title">tamaño</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_image_viewer">Image viewer</string>
    <string name="label_description">Descripción</string>
    <string name="label_ingredients">Ingredientes</string>
    <string name="action_category_info">Information</string>
    <string name="title_activity_plate_detail">Plate Detail Activity</string>
    <string name="title_dialog_new_comment">Nuevo comentario</string>
    <string name="cancel">Cancel</string>
    <string name="hint_comment">Escribe tu comentario</string>
    <string name="error_empty">No debe estar vacío.</string>
    <string name="progress_message_processing">Processing...</string>
    <string name="parse_application_id">RTM3ioKCBgaAJjXmDRr493sb13uYzGrMnePLhzhm</string>
    <string name="parse_client_key">vcKDV0Lr6dTxQXNSnZlYm2HDuRCEjozWK7cLLoB0</string>
    <string name="status_pending">Status: pending</string>
    <string name="error_empty_data">No hay datos</string>
    <string name="action_history">History</string>
    <string name="progress_message_doing_order">Enviando pedido...</string>
    <string name="error_empty_orders">No hay pedidos.</string>
    <string name="home">Inicio</string>
    <string name="action_goto_order">Ver estado.</string>
    <string name="warning">Atención</string>
    <string name="alert_delete_order_item">¿Seguro de eliminar este pedido?</string>
    <string name="yes">Si</string>
    <string name="add_new_comment">Toque aquí para ser el primero en comentar.</string>
    <string name="error_validate_fields">No debe haber campos vacios.</string>
    <string name="message_save_correct">Datos guardados correctamente.</string>
    <string name="title_dialog_do_order">Realizar pedido</string>
    <string name="hint_card_number">Credit card number</string>
    <string name="hint_address">My address</string>
    <string name="correct_payment">¡Pago correcto!</string>
    <string name="sjl_home_address"><![CDATA[<b>Caminos del Inca 1899</b>, Santiago de Surco  Lima 33. Reservas <b>(01) 2790888</b>]]></string>
    <string name="google_maps_key">AIzaSyBrH0Y50F2oS9Nv3680yju37ETcYlNRrYM</string>
    <string name="status_confirmed">confirmado</string>
    <string name="notification_order_confirmed">¡Orden confirmada!</string>
    <string name="notification_order_cancelled">¡Pedido cancelado!</string>
    <string name="ok">ok</string>
    <string name="title_activity_history">Historial de pedidos</string>
    <string name="hint_card_expires">Expires MM/dd</string>
    <string name="hint_card_cvv">CVV</string>
    <string name="hint_card_names">Cardholder\'s name</string>
    <string name="pay_cash">En efectivo</string>
    <string name="cash">S/. 100</string>
    <string name="info_chash">Indicar. ¿Con cuánto va a cancelar?</string>
    <string name="map_here">Tráelo aquí</string>
    <string name="hint_type_address">Address</string>
    <string name="hint_type_reference">Reference</string>
    <string name="hint_type_number">Telephone number</string>
    <string name="button_pay">Pagar</string>
    <string name="button_next">Sig.</string>
    <string name="hint_type_locals">Locales</string>
    <string name="hint_type_dni">DNI</string>
    <string name="hint_type_local_address">Seleccione un local</string>
    <string name="sending">Enviando...</string>
    <string name="status_cancelled">cancelado</string>

</resources>
