<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_orders"
        android:orderInCategory="100"
        android:title="@string/action_orders"
        android:icon="@drawable/ic_pedidos"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        android:icon="@drawable/ic_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="never" />

</menu>
