<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/title_dialog_new_comment"
        android:textColor="@color/white" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_input_comment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_comment" />

    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_color_0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="end">

        <Button
            android:id="@+id/bt_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/bt_send"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/button_send"
            android:textColor="?attr/colorPrimary" />

    </LinearLayout>

</LinearLayout>