<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_main_image"
    tools:context="rsantillanc.sanjoylao.view.activity.SurveyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="6">


            <!--Encabezado-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.75"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:padding="@dimen/space_4dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_16sp"
                    android:text="@string/title_survey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/red" />

            <!--1ra pregunta-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.33"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:textSize="@dimen/txt_18sp"
                    android:gravity="center"
                    android:text="@string/title_survey_question_one" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@style/foodRatingBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="1"
                    android:paddingLeft="@dimen/space_24dp"
                    android:paddingRight="@dimen/space_24dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/space_24dp"
                    android:paddingRight="@dimen/space_24dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_bad" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/label_excellent" />
                </RelativeLayout>
            </LinearLayout>

            <!--2da pregunta-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.33"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:textSize="@dimen/txt_18sp"
                    android:text="@string/title_survey_question_two" />

                <RatingBar
                    android:id="@+id/ratingBar2"
                    style="@style/foodRatingBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:rating="1.5"
                    android:paddingLeft="@dimen/space_24dp"
                    android:paddingRight="@dimen/space_24dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/space_24dp"
                    android:paddingRight="@dimen/space_24dp">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_bad" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/label_excellent" />
                </RelativeLayout>
            </LinearLayout>

            <!--3da pregunta-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.33"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:textSize="@dimen/txt_18sp"
                    android:text="@string/title_survey_question_three" />

                <RatingBar
                    style="@style/foodRatingBar"
                    android:layout_width="match_parent"
                    android:paddingStart="@dimen/space_4dp"
                    android:layout_height="wrap_content"
                    android:rating="0.5"
                    android:paddingLeft="@dimen/space_24dp"
                    android:paddingRight="@dimen/space_24dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/space_24dp"
                    android:paddingRight="@dimen/space_24dp">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_bad" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/label_excellent" />
                </RelativeLayout>
            </LinearLayout>
            <!--Mensaje-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:gravity="center|bottom"
                android:orientation="vertical"
                        >

                <!--<TextView-->
                    <!--android:id="@+id/textView15"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="35dp"-->
                    <!--android:gravity="center"-->
                    <!--android:textSize="@dimen/txt_18sp"-->
                    <!--android:text="@string/label_send_comments" />-->

                <EditText
                    style="@style/CustomEditTextStyle"
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="85dp"
                    android:ems="10"
                    android:hint="@string/label_send_comments"
                    android:textColorHint="@color/gray_color_0"
                    android:inputType="textMultiLine" />

            </LinearLayout>
            <!--Button-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:gravity="center|bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bt_survey_send"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_send_survey"
                    android:textColor="@color/white"
                    android:background="@drawable/button_inverse_selector"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
